--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "admin-lte": "^2.4.3",
     "echarts": "^4.0.4",
-    "jquery-slimscroll": "^1.3.8"
+    "excellentexport": "^3.0.0",
+    "jquery-slimscroll": "^1.3.8",
+    "layui-src": "^2.2.5"
   }
 }
