--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelchen/laravel-editormd": "^2.5",
+        "maatwebsite/excel": "~2.1.0",
         "mews/captcha": "~2.0"
     },
     "require-dev": {
