--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/tinker": "~1.0",
         "laravelchen/laravel-editormd": "^2.5",
         "maatwebsite/excel": "~2.1.0",
-        "mews/captcha": "~2.0"
+        "mews/captcha": "~2.0",
+        "spatie/laravel-permission": "~2.7",
+        "viacreative/sudo-su": "~1.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "~3.1",
