--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravelchen/laravel-editormd": "^2.5",
         "maatwebsite/excel": "~2.1.0",
         "mews/captcha": "~2.0",
+        "overtrue/laravel-lang": "~3.0",
         "spatie/laravel-permission": "~2.7",
         "viacreative/sudo-su": "~1.1"
     },
