--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "admin-lte": "^2.4.3",
     "echarts": "^4.0.4",
     "excellentexport": "^3.0.0",
+    "jquery-knob": "^1.2.11",
     "jquery-slimscroll": "^1.3.8",
+    "jquery-sparkline": "^2.4.0",
     "layui-src": "^2.2.5"
   }
 }
