--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "admin-lte": "^2.4.3",
+    "bootstrap-table": "^1.12.1",
     "echarts": "^4.0.4",
     "excellentexport": "^3.0.0",
     "jquery-knob": "^1.2.11",
